# rust-presentation

./: .envrc  Cargo.toml  flake.nix
migrations/: 20230519130314_initial-tables.sql
src/: handlers.rs  lib.rs  main.rs
